# dxe

./: LICENSE  README.md
backend/: .gitignore  (+1 more)
backend/data/: Cargo.toml
backend/data/.sqlx/: query-2c56f379e8c045af1109fd64a070912a93fba6d7f9bfbb5e6e2dbba175b267aa.json  query-3088a314c5b348184286d8cab09f5623483f3e6802058d3d0c173de62f5a3baa.json  query-345d26341be2dd96f896913a30f4c5bab2c709ca4846bfe82d7a78d409a3e597.json  query-4220b5874a3c52209e30ca030d18b8e5af37b94d56b70aa6e5de7eb22d5992bc.json  query-48bb5994d40e854eb9e93db4386cb1909a25da1829065192ba5d9e7d4acb055c.json  query-4f30eddeaa329a6d6500ce743302e3103505dd901a24837da47366f436e12503.json  query-4f7bea81ca5a52cbf7522af122a8c1352490f3e5119ae112b6606083c4aa100a.json  query-4fe13f5de1540e33019de344db7275993ac0f12f872ac13ef15c456bd1437051.json  query-5dddf7fb9d85b6cf5254b94326806be0f72090a1d2318cabc9a2b6c45572a146.json  query-5f6e018ad4ad9098b3a43e0a90edfe03923683fccf24fe83b37d1f962c2df31e.json  query-5fba664aa285a740b04d455e8d4859229ac79b54ca58a2e30d01250145d85c8f.json  query-6044764882ea394172759d6eea24c516938bda4c6b397b684f7ab13768dd0900.json  query-67448b568631b07a9a916a195ac8badeb036d24ac1c2fde33b5e0b067455e789.json  query-702beea33d721b6805b088c4a6f55fb439eed31bc92ca4e8f2e101eabb2fc5f7.json  query-80cedfd7424e7f0081feb85b308ad557f99412a974b6f7f21f985b0414dcd2b8.json  query-8680fcd83e7e6879e6dc5e887a8bf417070513ecd927a5759654635abfc8735f.json  query-90b09c29c3161635fd23082a0efaa32639012bc8d5ee1b70f5fe7e5ec917ba2b.json  query-94e69977ba9f48228a20b24b8663bf55ac1fbff6f2ef67e30c4863b2bcb221fa.json  query-9d261688c2c9188e497b1b5a94e7d53e343f88772cbe14fe945089bac696bfd3.json  query-9e92441ad900e7a64e5611eb44f1465ece2d8e4d5a5068caf05466c31266e0f3.json  query-9fa82cc8ee39a47859c6ce03991d2a593dba377c2781d057342ad0e61cf7fc4b.json  query-a12c7a7bc8305e53abcd6abfb717252dbf5936eb820de2948c4f03ddff98c1d0.json  query-a85716759a224362cc2a69a0dd6d7cb02d468bab099a726b0e8ebcd10904616e.json  query-a972aab3155932d6f6fc7b34dad4fcd6db373e947881b6361c67ac3d315be78a.json  query-acbfcd1573340942d4b8357d8b2b097bd6228cda49c615eb37d414a2cf0d7392.json  query-b09d38638071c19129ed655d8f654fd659a76e099f5872eebc3727a61c0f7123.json  query-b470ef6bf7fa0fbca0d108e9b54205136eccc6dc8f8b1e6173f9f78a1605c792.json  query-bbf3b0b1f38a375991e13168f9385fa1d9b95638c4b43debc1c56775281202de.json  query-c1892d861a48a17695199012bd1168016c8a84704eda4ae9a8f561cc7c4b0f41.json  query-c19b7791181b249f7b3a5ce290403aa717ae7a14d44a8315d09991883e3f127a.json  query-c595bf96d1d071bca89185e64c910a0390271bae9343f041881601ab33e85b64.json  query-c67fe5b83d99a04431b1bdbc94516c83590aeaf97baf554cc510e621cd763027.json  query-cb26f134ad38280b29cc87981750eb4681030a9910f3382cee84f12f17b55505.json  query-cfaf8e8bd0c0067dfbd2ae1fcfa82ca31a0e729f8da2244bfb0670e529a8a718.json  query-d30e26a22b486ece17cb2b6978581bfd1037b90f2471273f4f438e6c711f0f95.json  query-d59ebf2acb2b8308120ede69b8af6ffa1405d232da7b14fe35f3b86722b4e40d.json  query-d81de810e89dff1739cb8c82877ccbc128ea7e7fd22c4f552cec855ef6ffab3a.json  query-e0811fb37d34f5bd14da598798ebd337508004ff794736a4336b83e46303df8d.json  query-e09a28dcd5a971ca5b5d63b8bf6ba05676e7d3ad9b8b85307721e1af63e32169.json  query-e8f86d0bdf9ecdb68c3fb44f28a10064fd1774c8091364a2f5e4afda3b910bc7.json  (+6 more)
backend/data/migrations/: 20251121013600_init.sql  20251128013427_add_audio_recording.sql  20251201085428_rename_reservation_to_adhoc_reservation.sql  20251202103130_add_telemetry_file.sql  20251214123146_add_booking_amendment.sql  20260108083615_add_kakao_user.sql  20260118042129_remove_kakao_user.sql  20260129172211_add_mixer_config.sql
backend/data/src/: entities.rs  error.rs  lib.rs  queries.rs
backend/server/: Cargo.toml
backend/server/src/: config.rs  main.rs  middleware.rs  services.rs  utils.rs
server/: .gitignore  Cargo.toml
server/data/: Cargo.toml
server/data/.sqlx/: query-02d4a007b4a2e37da72926385007112f7a9112740af86c8d72311b059786eae1.json  query-02d637e274d6aad7aef4ffa6b18ca48cdea40f58c3d88e51d2a733b0a20498d1.json  query-049cfdcf1fa257dfdadf1b1e17b8a16fc21192b085f6ac93b6946de5489d4636.json  query-060c2479bc415e56ea89c8eeeab2a1aa66d8c51adbcc209d9b37ba7664e5d135.json  query-0831f96ab2b6790da43dcee70f0d41fef3fe2ebaa23fafa88309d027b71fda03.json  query-09953727c3c1872bd0e72d31bddd05a3d51637cdefe488004b85001f3c4250c1.json  query-0a80e0be1adacf21dd3cc19d42ab8008b77e24c4bd03bc61aae55b766d248bd3.json  query-0ba3191eaeeebd48d1fb73c0531a202181da28e158bfce07d3154e43555f5585.json  query-0f940c2a3f63ea22b80d94806a10b0231f62241c667e6f66ccd55cafaaec076e.json  query-11b15de9d653655604587730155c1bbab1a867d83c5ae8e457e311e769d947e7.json  query-1500cca349da34e8f6645935f7c6714df2a144940e4da40b0ba6b6f2c09e3f82.json  query-197dbb9cc247e85e74a2a18abb2cd8e47d7ca5d7bb6bc3039dd37c3819578ec2.json  query-1c239ff2901690cdbccfddb7715cfecf93b6d9547be2d4b289246ebc8104a6d1.json  query-1e1095fb1ea3fff9513fc7ec10cccfd88b4a68a96edce4a6100aa8e339989b24.json  query-1f617c2a53edf8ff3e1e872a0f0f62c23db8567b977736d122f08fc6e0538a54.json  query-247062e7f4590b1a6501815d8d48b7c54cc7f816e0673616ae2d9ff286728b28.json  query-28f2b4589fa717f54315b41e1db6a089594488cd8d585818516b5848f1a5e0d0.json  query-29332265c48f015ca81a60b1cb14229a728ee53961c50d509646d4d553f50ee4.json  query-2ec1ad52a850857f0cad6fdaa382b0a6175db91a2a69a4d87cdbe7b906670f35.json  query-2ee497a6bce7249b3e621949bad63431cb1e2f87be65587758dd7fdc893e601f.json  (+88 more)
server/identity/: Cargo.toml
server/identity-impl/: Cargo.toml
server/main/: Cargo.toml  config.toml
server/notification/: Cargo.toml
server/notification-impl/: Cargo.toml
server/s2s-shared/: Cargo.toml
server/space-coordinator/: Cargo.toml
server/types/: Cargo.toml
(+462 files in other folders)
