[workspace]
members = ["data", "extern", "main"]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde"] }
