[workspace]
members = ["data", "extern", "main", "space-coordinator", "s2s-shared", "types"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
