[package]
name = "dxe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-http = "3"
actix-jwt-auth-middleware = "0.5"
actix-multipart = "0.7"
actix-state-guards = "0.1.0"
actix-web = { version = "4.11", features = ["cookies"] }
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ed25519-compact = "2"
env_logger = "0.11"
futures = "0.3"
jwt-compact = { version = "0.8", features = ["ed25519-compact"] }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.15"
sqlx = { version = "0.8", features = [ "migrate", "runtime-tokio", "sqlite" ] }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.9"
url = { workspace = true }
urlencoding = "2"

dxe-data = { path = "../data" }
dxe-extern = { path = "../extern", features = ["biztalk", "google-cloud", "itsokey", "kakao", "ntfy", "toss-payments"] }
dxe-s2s-shared = { path = "../s2s-shared" }
dxe-types = { path = "../types"}
