[package]
name = "dxe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.9"
url = { version = "2.5", features = ["serde"] }
