[package]
name = "dxe-space-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ed25519-compact = "2"
env_logger = "0.11"
libc = "0.2"
log = { workspace = true }
ping = "0.7"
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-task-scheduler = "1"
toml = "0.9"
url = { workspace = true }
rumqttc = "0.25"

dxe-extern = { path = "../extern" }
dxe-s2s-shared = { path = "../s2s-shared" }
dxe-types = { path = "../types" }
