[package]
name = "dxe-space-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = "1.10"
chrono = { workspace = true }
clap = { workspace = true }
csv-async = { version = "1.3", features = ["tokio"] }
ed25519-compact = "2"
env_logger = "0.11"
futures = "0.3"
libc = "0.2"
log = { workspace = true }
parking_lot = { workspace = true }
ping = "0.7"
reqwest = { workspace = true, features = ["multipart"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tasi-sound-level-meter = { git = "https://github.com/segfault87/tasi653b-rs.git" }
tokio = { workspace = true }
tokio-task-scheduler = "1"
toml = "0.9"
url = { workspace = true }
rumqttc = "0.25"

dxe-extern = { path = "../extern" }
dxe-s2s-shared = { path = "../s2s-shared" }
dxe-types = { path = "../types" }
